--- a/traefik-ingress.yaml
+++ b/traefik-ingress.yaml
@@ -5,7 +5,7 @@ metadata:
   namespace: kube-system
 spec:
   rules:
-  - host: hello.info
+  - host: localhost
     http:
       paths: 
       - path: /
